# mininterface

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  __init__.py  _griffe_lazy_aliases.py  _program.ipynb  deneme.py  index.html  mininterface.py  mkdocs.yml  objects.inv  pyproject.toml  tests.py
.github/workflows/: python-publish.yml  run-unittest.yml
Argparse-caveats/: index.html
CallbackTag/: index.html
Changelog/: index.html
Cli/: index.html
Config-file/: index.html
Configuration/: index.html
DatetimeTag/: index.html
Dev-guide/: index.html
Dialogs/: index.html
Examples/: index.html
Exceptions/: index.html
Experimental/: index.html
Facet/: index.html
Helper-types/: index.html
Interfaces/: index.html
Mininterface/: index.html
Options/: index.html
Overview/: index.html
PathTag/: index.html
Prepared-annotations/: index.html
SecretTag/: index.html
SelectTag/: index.html
Settings/: index.html
Standalone/: index.html
Subcommands/: index.html
Supported-types/: index.html
Tag/: index.html
Tag-aliases/: index.html
Types/: index.html
Validation/: index.html
_templates/: dataclass.html
asset/: argparse_form.avif  argparse_required.avif  ask-number.avif  bash_completion_tutorial.avif  callback_button.avif  callback_choice.avif  choice_enum_instance.avif  choice_enum_list.avif  choice_enum_type.avif  choice_table_span.avif  choices_default.avif  choices_labels.avif  choices_list.avif  complex_example.avif  complex_example_missing_field.avif  complex_form_dict.avif  configuration-not-used.avif  configuration-used.avif  confirm_countdown.avif  datetimetag_date_calendar.avif  datetimetag_datetime.avif  enum_vals.avif  examples-function-with.avif  examples-function.avif  facet_backend.avif  facet_frontend.avif  file_picker.avif  hello-gui.avif  hello-text.avif  hello-tui.avif  hello-web.avif  hello-with-statement-tui.avif  is_yes.avif  layout-gui.avif  layout-tui.avif  list_of_paths.avif  nested-dataclass.avif  nested-subcommands-1.avif  nested-subcommands-2.avif  nested-subcommands-3.avif  (+37 more)
asset/readme-readonly/: index.html
docs/: Argparse-caveats.md  CallbackTag.md  Changelog.md  Cli.md  Common.md  Config-file.md  Configuration.md  DatetimeTag.md  Dev-guide.md  Dialogs.md  Examples.md  Exceptions.md  Experimental.md  Facet.md  Helper-types.md  Interfaces.md  Mininterface.md  Options.md  Overview.md  PathTag.md  Prepared-annotations.md  SecretTag.md  SelectTag.md  Settings.md  Standalone.md  Subcommands.md  Supported-types.md  Tag-aliases.md  Tag-subclasses.md  Tag.md  Types.md  Validation.md  asset  index.md  run.md
extra/: convert_readme.py  validate_dependencies.py
mininterface/: FormDict.py  FormField.py  GuiInterface.py  HeadlessInterface.py  Mininterface.py  Redirectable.py  TextInterface.py  TextualInterface.py  TuiInterface.py  ValidationFail.py  __init__.py  __main__.py  aliases.py  auxiliary.py  cli.py  cli_parser.py  common.py  config.py  dialogs.py  exceptions.py  experimental.py  facet.py  form_dict.py  gui_interface.py  guiinterface.py  interfaces.py  mininterface.py  options.py  pfmenu.py  redirectable.py  settings.py  showcase.py  start.py  static.py  subcommands.py  tag.py  tag_factory.py  text_interface.py  textual_interface.py  type_stubs.py  (+2 more)
mininterface/_lib/: argparse_support.py  auxiliary.py  cli_flags.py  cli_parser.py  cli_utils.py  config_file.py  dataclass_creation.py  dict_utils.py  docstrings.py  form_dict.py  form_types.py  future_compatibility.py  ipc_command.py  redirectable.py  run.py  shortcuts.py  showcase.py  start.py  subprocess_base.py  subprocess_child_base.py  tui_command.py  tyro_patches.py
mininterface/_mininterface/: __init__.py  adaptor.py  mixin.py
mininterface/_text_interface/: __init__.py  adaptor.py  facet.py  timeout.py
mininterface/_textual_interface/: __init__.py  adaptor.py  button_contents.py  facet.py  file_picker_input.py  form_contents.py  interface.py  secret_input.py  style.tcss  subprocess_adaptor.py  subprocess_child.py  textual_app.py  timeout.py  tui_command.py  widgets.py
mininterface/_tk_interface/: __init__.py  adaptor.py  date_entry.py  external_fix.py  facet.py  interface.py  redirect_text_tkinter.py  secret_entry.py  select_input.py  subprocess_adaptor.py  subprocess_child.py  timeout.py  utils.py
mininterface/_web_interface/: __init__.py  app.py  child_adaptor.py  parent_adaptor.py
mininterface/facet/: __init__.py
mininterface/gui_interface/: __init__.py  tk_facet.py  tk_window.py  utils.py
mininterface/mininterface/: __init__.py  adaptor.py  facet.py  mixin.py
mininterface/tag/: __init__.py  alias.py  callback_tag.py  datetime_tag.py  flag.py  internal.py  path_tag.py  secret_tag.py  select_tag.py  tag.py  tag_factory.py  type_stubs.py
mininterface/text_interface/: __init__.py  adaptor.py  facet.py
mininterface/textual_interface/: __init__.py  adaptor.py  button_contents.py  facet.py  file_picker_input.py  form_contents.py  secret_input.py  style.tcss  textual_adaptor.py  textual_app.py  textual_button_app.py  textual_facet.py  widgets.py
mininterface/tk_interface/: __init__.py  adaptor.py  date_entry.py  dategui.py  external_fix.py  facet.py  redirect_text_tkinter.py  secret.py  secret_entry.py  utils.py  (+3 more)
run/: index.html
search/: search_index.json
tests/: SimpleEnv.yaml  SimpleEnv2.yaml  attrs_configs.py  complex.yaml  config_union.yaml  configs.py  dumb_options.py  dumb_settings.py  heavy_config.yaml  heavy_config_union.yaml  heavy_missing_passages.py  heavy_nesting_configs.py  heavy_nesting_missing_configs.py  heavy_passages.py  minimal_test.py  pydantic.yaml  pydantic_configs.py  shared.py  some-settings.yaml  test_.py  test_annotated.py  test_argparse.py  test_attrs_integration.py  test_auxiliary.py  test_cli.py  test_conversion.py  test_dataclass_creation.py  test_dialogs.py  test_flag.py  test_gui.py  test_heavy_nesting.py  test_inherited_tag.py  test_inteface.py  test_interface.py  test_log.py  test_main.py  test_path_tag.py  test_pydantic_integration.py  test_run.py  test_secret_tag.py  (+12 more)
(+10 files in other folders)
