[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mininterface"
version = "1.0.0"
description = "A minimal access to GUI, TUI, CLI and config"
authors = ["Edvard Rejthar <edvard.rejthar@nic.cz>"]
license = "LGPL-3.0-or-later"
homepage = "https://github.com/CZ-NIC/mininterface"
readme = "README.md"

[tool.poetry.dependencies]
# Minimal requirements (dialogs with partial .form support (m.form(dict) or m.form(dataclass_instance))
python = "^3.10"
simple_term_menu = "*"
annotated-types = "*"
# Basic requirements (CLI and full .form support (m.form(dataclass_class))
tyro = { version = "^0.9", optional = true }
pyyaml = { version = "*", optional = true }
humanize = { version = "*", optional = true }
textual = { version = "<2.0.0", optional = true }
tkinter-tooltip = { version = "*", optional = true }
tkinter_form = { version = "0.2.1", optional = true }
tkscrollableframe = { version = "*", optional = true }
# Extras requirements for all other groups
textual-serve = { version = "*", optional = true }
pillow = { version = "*", optional = true }
tkcalendar = { version = "*", optional = true }        # GPLv3
textual_imageview = { version = "*", optional = true }
autocombobox = { version = "1.4.2", optional = true }  # GPLv3

[tool.poetry.extras]
# Basic requirements
basic = [
    "tyro",
    "pyyaml",
    "humanize",
    "textual",
    "tkinter-tooltip",
    "tkinter_form",
    "tkscrollableframe",
]

# specific group that scatter among UIs
img = [
    # basic
    "tyro",
    "pyyaml",
    "humanize",
    "textual",
    "tkinter-tooltip",
    "tkinter_form",
    "tkscrollableframe",
    # proper
    "pillow",
    "textual_imageview",
]

# Individual UIs
tui = [
    # basic
    "tyro",
    "pyyaml",
    "humanize",
    "textual",
    "tkinter-tooltip",
    "tkinter_form",
    "tkscrollableframe",
    # specific
    "textual_imageview",
]
gui = [ # basic
    "tyro",
    "pyyaml",
    "humanize",
    "textual",
    "tkinter-tooltip",
    "tkinter_form",
    "tkscrollableframe",
    # specific
    "pillow",
    "tkcalendar",
    "autocombobox",
]
web = [
    # basic
    "tyro",
    "pyyaml",
    "humanize",
    "textual",
    "tkinter-tooltip",
    "tkinter_form",
    "tkscrollableframe",
    # specific
    "textual-serve",
]
ui = [
    # basic
    "tyro",
    "pyyaml",
    "humanize",
    "textual",
    "tkinter-tooltip",
    "tkinter_form",
    "tkscrollableframe",
    # web, tui, gui
    "textual-serve",
    "pillow",
    "tkcalendar",
    "textual_imageview",
    "autocombobox",
]
# Group 'all' is reserved for future use.
# Might contain some big dependencies, other interfaces.
# Now is the same as 'ui'.
all = [
    "tyro",
    "pyyaml",
    "humanize",
    "textual",
    "tkinter-tooltip",
    "tkinter_form",
    "tkscrollableframe",
    "textual-serve",
    "pillow",
    "tkcalendar",
    "textual_imageview",
    "autocombobox",
]

[tool.poetry.scripts]
mininterface = "mininterface.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "*"
attrs = "*"
pydantic = "*"
pre-commit = "*"
